--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body>
     <main>
         <div class="container">
-            <div class="paper"> <img src="images/paper.svg" data-attribute="paper" alt="Imagem da opção papel"> </div>
-            <div class="rock"> <img src="images/rock.svg" data-attribute="rock" alt="Imagem da opção pedra"> </div>
-            <div class="scissor"> <img src="images/scissor.svg" data-attribute="scissors" alt="Imagem da opção tesoura">
+            <div class="paper"> <img src="images/paper.svg" data-attribute="papel" alt="Imagem da opção papel"> </div>
+            <div class="rock"> <img src="images/rock.svg" data-attribute="pedra" alt="Imagem da opção pedra"> </div>
+            <div class="scissor"> <img src="images/scissor.svg" data-attribute="tesoura" alt="Imagem da opção tesoura">
             </div>
         </div>
         <div class="placar">
             <div class="placar__container">
                 <h2>Placar</h2>
                 <p>Player: <span id="playerScore">0</span></p>
-                <p>Computer: <span id="computerScore">0</span></p>
+                <p>Computador: <span id="computerScore">0</span></p>
             </div>
             <div class="result">
-                <p id="playerOptionn">You choose: <span id="playerOption"></span></p>
-                <p id="computerOptionn">Computer Choose: <span id="computerOption"></span></p>
-                <p id="game_Result">Result</p>
+                <p>Você escolheu: <span id="playerOption"></span></p>
+                <p>Computador escolheu: <span id="computerOption"></span></p>
+                <p id="game_Result">Resultado</p>
             </div>
         </div>
     </main>
